--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -6,3 +6,5 @@ database.password=
 database.init=true
 jdbc.initLocation=initDB_hsql.sql
 jpa.showSql=true
+hibernate.format_sql=true
+hibernate.use_sql_comments=true
