--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring.version>5.1.9.RELEASE</spring.version>
-        <spring-data-jpa.version>2.1.10.RELEASE</spring-data-jpa.version>
+        <spring.version>5.1.7.RELEASE</spring.version>
+        <spring-data-jpa.version>2.1.9.RELEASE</spring-data-jpa.version>
         <hibernate.version>5.4.3.Final</hibernate.version>
         <hibernate-validator.version>6.0.17.Final</hibernate-validator.version>
         <hsqldb.version>2.5.0</hsqldb.version>
@@ -25,6 +25,9 @@
         <slf4j.version>1.7.25</slf4j.version>
         <javax-annotation.version>1.3.2</javax-annotation.version>
         <jackson-json.version>2.9.9</jackson-json.version>
+
+        <!--    Tests  -->
+        <junit.jupiter.version>5.5.1</junit.jupiter.version>
     </properties>
 
     <build>
@@ -98,6 +101,24 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-json.version}</version>
+        </dependency>
+        <!--Test-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.12.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
