--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <slf4j.version>1.7.25</slf4j.version>
         <javax-annotation.version>1.3.2</javax-annotation.version>
         <jackson-json.version>2.9.9</jackson-json.version>
+        <spring.security.version>5.1.5.RELEASE</spring.security.version>
+
 
         <!--    Tests  -->
         <junit.jupiter.version>5.5.1</junit.jupiter.version>
@@ -130,6 +132,23 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+        </dependency>
+
+        <!--security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring.security.version}</version>
         </dependency>
 
         <dependency>
